@@ -20,6 +20,7 @@ SubVersion: $Id$
 	- [kevin] $2243: created a D-Bus interface
 	- [kevin] $2245: register a service name for the D-Bus interface
 	- [kevin] $2246: don't check for unneeded aRts and KDE documentation generation executables (request from Gentoo #112985)
+	- [kevin] $2250: don't call CoInitialize and CoUninitialize in oleaut.cpp, GTK+ already does this (to use input methods)
 
 - 07/07/2006, version 2.81b
 	- [kevin] $2128: HW4 has 8 MB of FlashROM
